# pyllvm

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: ci.windows-msys2.yml
lib/: CxxWrapper.pyi  __init__.pyi
lib/llvm/: AliasPattern.pyi  AliasPatternCond.pyi  AnonymousNameInit.pyi  AsmRewrite.pyi  AsmRewriteKind.pyi  AsmToken.pyi  BinOpInit.pyi  BitInit.pyi  BitRecTy.pyi  BitsInit.pyi  BitsRecTy.pyi  CondOpInit.pyi  DagInit.pyi  DagRecTy.pyi  DebugCompressionType.pyi  DefInit.pyi  DiagnosticPredicateTy.pyi  EmitDwarfUnwindType.pyi  ExceptionHandling.pyi  ExistsOpInit.pyi  FieldInit.pyi  FoldOpInit.pyi  Init.pyi  IntInit.pyi  IntRecTy.pyi  IntelExpr.pyi  IsAOpInit.pyi  LLVMContext.pyi  ListInit.pyi  ListRecTy.pyi  MCAsmBackend.pyi  MCAsmInfo.pyi  MCAsmInfoCOFF.pyi  MCAsmInfoDarwin.pyi  MCAsmInfoELF.pyi  MCAsmInfoGNUCOFF.pyi  MCAsmInfoGOFF.pyi  MCAsmInfoMicrosoft.pyi  MCAsmInfoWasm.pyi  MCAsmInfoXCOFF.pyi  (+64 more)
src/: CxxWrapper.cpp  CxxWrapper.hpp  init.cpp  init.hpp  macro.hpp  py.hpp
src/llvm/ADT/: ArrayRef.hpp  Optional.hpp  StringRef.hpp  Triple.cpp
src/llvm/IR/: LLVMContext.cpp  Module.cpp
src/llvm/MC/: MCAsmBackend.cpp  MCAsmInfo.cpp  MCAsmInfo.hpp  MCAsmInfoCOFF.cpp  MCAsmInfoDarwin.cpp  MCAsmInfoELF.cpp  MCAsmInfoGOFF.cpp  MCAsmInfoWasm.cpp  MCAsmInfoXCOFF.cpp  MCAsmMacro.cpp  MCCodeEmitter.cpp  MCContext.cpp  MCDirectives.cpp  MCFixup.cpp  MCInst.cpp  MCInstPrinter.cpp  MCInstrAnalysis.cpp  MCInstrDesc.cpp  MCInstrInfo.cpp  MCObjectFileInfo.cpp  MCRegister.cpp  MCRegisterInfo.cpp  MCSection.cpp  MCSectionMachO.cpp  MCStreamer.cpp  MCSubtargetInfo.cpp  MCSymbol.cpp  MCTargetOptions.cpp  SectionKind.cpp  TargetRegistry.cpp
src/llvm/MC/MCDisassembler/: MCDisassembler.cpp
src/llvm/MC/MCParser/: MCAsmLexer.cpp  MCAsmParser.cpp  MCAsmParserExtension.cpp  MCAsmParserExtension.hpp  MCTargetAsmParser.cpp
src/llvm/Support/: MemoryBuffer.cpp  SMLoc.cpp  SourceMgr.cpp  TargetSelect.cpp  raw_py_binaryio_ostream.hpp
src/llvm/TableGen/: Parser.cpp  Record.cpp
utils/stubgen/: __init__.py  __main__.py  generator_manager.py  pybind11_funcsig.py  type_manager.py
utils/stubgen/generators/: __init__.py  attribute_stub_generator.py  class_stub_generator.py  classmethod_stub_generator.py  function_stub_generator.py  method_stub_generator.py  module_stub_generator.py  property_stub_generator.py  staticmethod_stub_generator.py  stub_generator.py
