[metadata]
name = pyllvm
version = 15.0.6.1
description = A Python binding for LLVM.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hypersine/pyllvm

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Compilers

[options]
python_requires = >=3.6
